--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.38.0",
     "@aws-cdk/aws-lambda": "^1.38.0",
     "@aws-cdk/aws-sns": "1.38.0",
     "@aws-cdk/aws-sns-subscriptions": "1.38.0",
